Address Sonar findings: extract Mongo operator constants, drop deprecated PageRequest.page()